Update app route & support creation of new user (no encryption yet)

--- a/sign-up-form.ejs
+++ b/sign-up-form.ejs
@@ -9,9 +9,9 @@
   <h1>Sign up</h1>
   <form action="" method="POST">
     <label for="username">Username</label>
-    <input type="username" placeholder="username" type="text" />
+    <input type="username" name="username" placeholder="username" type="text" />
     <label for="password">Password</label>
-    <input type="password" type="password" />
+    <input type="password" name="password" type="password" />
     <button>Sign Up</button>
   </form>
 </body>
