--- a/index.ejs
+++ b/index.ejs
@@ -7,7 +7,7 @@
 <body>
   <% if (user) {%>
     <h1>Welcome back <%= user.username %></h1>
-    <a href="/log-out">LOG OUT</a>
+    <a href="/log-out">Log out</a>
   <% } else { %>
     <h1>please log in</h1>
     <form action="/log-in" method="POST">
