--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -7,9 +7,9 @@
 </head>
 <body>
   <h1>Sign up</h1>
-  <form action="" method="POST">
+  <form action="/sign-up" method="POST">
     <label for="username">Username</label>
-    <input type="username" name="username" placeholder="username" type="text" />
+    <input type="text" name="username" placeholder="username" />
     <label for="password">Password</label>
     <input type="password" name="password" type="password" />
     <button>Sign Up</button>
