Add members only header box

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/style.css">
   <title>Members only</title>
 </head>
 <body>
@@ -18,5 +19,13 @@
       <button>Log In</button>
     </form>
   <%}%>
+
+  <div class="center">
+    <div class="main_top">
+    </div>
+    <div class="main_header">
+      <h1 class="main_header__text">Members Only</h1>
+    </div>
+  </div>
 </body>
 </html>
