--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,9 +9,13 @@ body {
   border-top: 2px solid #000000;
   border-right: 2px solid #000000;
   border-left: 2px solid #000000;
-  border-top-right-radius: 3px;
-  border-top-left-radius: 3px;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
   box-shadow: 9px 7px 0px 0px #000000;
+}
+
+.main_top__icons {
+  height: 18px;
 }
 
 .main_header {
@@ -20,11 +24,12 @@ body {
   width: 400px;
   box-shadow: 9px 7px 0px 0px #000000;
   border: 2px solid #000000;
-  border-bottom-right-radius: 3px;
-  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
 
 .main_header__text {
+  font-size: 64px;
   margin: 8px 12px 12px 8px;
   text-align: center;
 }
