--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,7 @@
 
   <div class="center">
     <div class="main_top">
+      <img class="main_top__icons" src="images/memberboxicons.png" alt="box_icons">
     </div>
     <div class="main_header">
       <h1 class="main_header__text">Members Only</h1>
