--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap');
+
+
 body {
   background-color: #F5BE49;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
 .main_top {
   height: 18px;
   width: 400px;
-  background-color: #fff;
+  background-color: #ffffff;
   border-top: 2px solid #000000;
   border-right: 2px solid #000000;
   border-left: 2px solid #000000;
@@ -19,7 +23,7 @@ body {
 }
 
 .main_header {
-  background-color: #fff;
+  background-color: #ffffff;
   height: 200px;
   width: 400px;
   box-shadow: 9px 7px 0px 0px #000000;
@@ -30,8 +34,16 @@ body {
 
 .main_header__text {
   font-size: 64px;
+  font-weight: 900;
   margin: 8px 12px 12px 8px;
   text-align: center;
+}
+
+.nav_buttons {
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 24px;
+  gap: 12px;
 }
 
 .center {
@@ -39,4 +51,19 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.messages {
+  width: 50vw;
+  height: 400px;
+  background-color: #fff;
+  box-shadow: 9px 7px 0px 0px #000000;
+  border: 4px solid #000000;
+  border-radius: 5px;
+}
+
+.button1, .button2 {
+  background-color: #ffffff;
+  padding: 8px;
+  border-radius: 5px;
 }
