--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,9 @@
+<% const renderMessages = (value) => { %>
+  <div style="display: block;">
+      <h1>Message <%= value %></h1>
+  </div>
+<% } %>
+
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -19,13 +25,23 @@
       <button>Log In</button>
     </form>
   <%}%>
-
+  
+  <div class="nav_buttons">
+    <button class="button1">Button 1</button>
+    <button class="button2">Button 2</button>
+  </div>
   <div class="center">
     <div class="main_top">
       <img class="main_top__icons" src="images/memberboxicons.png" alt="box_icons">
     </div>
     <div class="main_header">
       <h1 class="main_header__text">Members Only</h1>
+    </div>
+    <p>Only members who have signed up with the correct pass code can see who wrote the messages and when </p>
+    <div class="messages">
+      <% for (let i = 1; i <= 5; i++) { %>
+        <%= renderMessages(i); %>
+      <% } %>
     </div>
   </div>
 </body>
