--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,14 +55,14 @@ body {
 
 .messages {
   width: 50vw;
-  height: 400px;
+  min-height: 200px;
   background-color: #fff;
   box-shadow: 9px 7px 0px 0px #000000;
   border: 4px solid #000000;
   border-radius: 5px;
 }
 
-.button1, .button2 {
+#button1, #button2 {
   background-color: #ffffff;
   padding: 8px;
   border-radius: 5px;
