--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@ body {
 
 .main_top {
   height: 18px;
-  width: 400px;
+  width: 340px;
   background-color: #ffffff;
   border-top: 2px solid #000000;
   border-right: 2px solid #000000;
@@ -24,8 +24,8 @@ body {
 
 .main_header {
   background-color: #ffffff;
-  height: 200px;
-  width: 400px;
+  height: 224px;
+  width: 340px;
   box-shadow: 9px 7px 0px 0px #000000;
   border: 2px solid #000000;
   border-bottom-right-radius: 5px;
@@ -41,8 +41,7 @@ body {
 
 .nav_buttons {
   display: flex;
-  justify-content: flex-end;
-  margin-right: 24px;
+  justify-content: center;
   gap: 12px;
 }
 
