--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,3 +66,24 @@ body {
   padding: 8px;
   border-radius: 5px;
 }
+
+.sign_up__modal, .sign_in__modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.sign_up__content, .sign_in__content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%; 
+}
