--- a/views/partials/sign-in-modal.ejs
+++ b/views/partials/sign-in-modal.ejs
@@ -1,4 +1,5 @@
-<h1>please log in</h1>
+<div class="sign_up__content">
+  <h1>please log in</h1>
   <form action="/log-in" method="POST">
     <label for="username">Username</label>
     <input name="username" placeholder="username" type="text" />
@@ -6,3 +7,4 @@
     <input name="password" type="password" />
     <button>Log In</button>
   </form>
+</div>
