--- a/views/partials/sign-up-modal.ejs
+++ b/views/partials/sign-up-modal.ejs
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Members Only - Sign up!</title>
-</head>
-<body>
+<div class="sign_in__content">
   <h1>Sign up</h1>
   <form action="/sign-up" method="POST">
     <label for="username">Username</label>
@@ -14,5 +7,4 @@
     <input type="password" name="password" type="password" />
     <button>Sign Up</button>
   </form>
-</body>
-</html>
+</div>
