Moved routes back into main app

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,7 +61,7 @@ body {
   border-radius: 5px;
 }
 
-#button1, #button2 {
+#sign_in_btn, #sign_up_btn {
   background-color: #ffffff;
   padding: 8px;
   border-radius: 5px;
