--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/style.css">
-  <script src="/js/app.js" defer></script>
+  <script src="/js/script.js" defer></script>
   <title>Members only</title>
 </head>
 <body> 
@@ -13,10 +13,13 @@
     </div>
     <div class="main_header">
       <h1 class="main_header__text">Members Only</h1>
+    <% if (user) {%>
+    <% } else { %>
       <div class="nav_buttons">
         <button id="sign_in_btn">Sign In</button>
         <button id="sign_up_btn">Sign Up</button>
       </div>
+    <%}%>
     </div>
     <% if (user) {%>
       <p>Welcome back <%= user.username %></p>
