--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,8 +30,8 @@
       <p>Only members who have signed up with the correct pass code can see who wrote the messages and when </p>
     <%}%>
     <div class="messages">
-      <% for (let i = 1; i <= 10; i++) { %>
-        <%- include('./partials/messages.ejs', {value: i}); %>
+      <% for (let i = 0; i < messages.length; i++) { %>
+        <%- include('./partials/messages.ejs', {index: i, messages: messages}); %>
       <% } %>
     </div>
   </div>
