--- a/views/partials/message-form.ejs
+++ b/views/partials/message-form.ejs
@@ -1,8 +1,7 @@
 <div class="message_form_content">
   <h1>New message</h1>
   <form action="/new-message" method="POST">
-    <label for="message">Message</label>
     <input name="message" type="text" />
-    <button>Post new message</button>
+    <button class="new_message_btn">Post</button>
   </form>
 </div>
