--- a/views/partials/messages.ejs
+++ b/views/partials/messages.ejs
@@ -1,5 +1,5 @@
 <div class="message">
-  <div>
+  <div class="message_details">
     <% if (user) {%>
       <h2 class="message_name"><%= messages[index].name %></h2>
       <div class="date_and_time">
