--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,6 +16,7 @@ p, h1, h2 {
 }
 
 .main_top {
+  margin-top: 24px;
   height: 18px;
   width: 340px;
   background-color: #ffffff;
@@ -61,6 +62,10 @@ p, h1, h2 {
   align-items: center;
 }
 
+.message_form_content {
+  width: 75vw;
+}
+
 .messages {
   width: 75vw;
   min-height: 200px;
@@ -103,6 +108,12 @@ p, h1, h2 {
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
+.support_message {
+  max-width: 500px;
+  text-align: center;
+  margin: 24px 48px 24px 48px;
+}
+
 .sign_in_name {
   display: flex;
   justify-content: flex-end;
@@ -118,9 +129,17 @@ p, h1, h2 {
   width: 50%; 
 }
 
+.new_message_btn {
+  display: block;
+}
+
 .message {
   display: flex;
-  margin-left: 12px;
+  padding: 12px 12px 12px 12px;
+}
+
+.message_details {
+  min-width: 180px;
 }
 
 .date_and_time {
@@ -132,8 +151,7 @@ p, h1, h2 {
 }
 
 .message_text {
-  margin-top: 6px;
-  margin-left: 36px;
+  margin: 6px 12px 12px 6px;
 }
 
 .no_name, .no_date, .no_time {
