Add validation for new sign-ups

--- a/views/partials/sign-up-modal.ejs
+++ b/views/partials/sign-up-modal.ejs
@@ -1,10 +1,12 @@
-<div class="sign_in__content">
+<div class="sign_up__content">
   <h1>Sign up</h1>
-  <form action="/sign-up" method="POST">
+  <form action="/sign-up" id="sign_up_form" method="POST">
     <label for="username">Username</label>
     <input type="text" name="username" placeholder="username" />
     <label for="password">Password</label>
-    <input type="password" name="password" type="password" />
+    <input type="password" name="password" />
+    <label for="passcode">Passcode</label>
+    <input type="password" name="passcode" />
     <button>Sign Up</button>
   </form>
 </div>
