--- a/views/partials/message-form.ejs
+++ b/views/partials/message-form.ejs
@@ -1,7 +1,9 @@
 <div class="message_form_content">
   <h1>New message</h1>
   <form action="/new-message" method="POST">
-    <input name="message" type="text" />
-    <button class="new_message_btn">Post</button>
+    <input class="message_box" name="message" type="text" />
+    <div class="new_message_btn_div">
+      <button class="new_message_btn">Post</button>
+    </div>
   </form>
 </div>
