--- a/views/partials/sign-in-modal.ejs
+++ b/views/partials/sign-in-modal.ejs
@@ -1,10 +1,8 @@
-<div class="sign_up__content">
+<div class="sign_in__content">
   <h1>please log in</h1>
-  <form action="/log-in" method="POST">
-    <label for="username">Username</label>
+  <form action="/log-in" id="sign_in_form" method="POST">
     <input name="username" placeholder="username" type="text" />
-    <label for="password">Password</label>
-    <input name="password" type="password" />
+    <input name="password" placeholder="password" type="password" />
     <button>Log In</button>
   </form>
 </div>
