--- a/views/partials/messages.ejs
+++ b/views/partials/messages.ejs
@@ -7,7 +7,7 @@
         <p class="message_time"><%= messages[index].time_formatted %></p>
       </div>
     <% } else { %>
-      <h2 class="no_name">Some random:</h2>
+      <h2 class="no_name message_name">Some random:</h2>
       <div class="date_and_time">
         <p class="no_date">Dec 31, 1999</p>
         <p class="no_time">23:59 UTC</p>
