--- a/views/partials/sign-in-modal.ejs
+++ b/views/partials/sign-in-modal.ejs
@@ -1,8 +1,12 @@
 <div class="sign_in__content">
   <h1>please log in</h1>
   <form action="/log-in" id="sign_in_form" method="POST">
-    <input name="username" placeholder="username" type="text" />
-    <input name="password" placeholder="password" type="password" />
-    <button>Log In</button>
+    <div class="login_input">
+      <input name="username" placeholder="username" type="text" />
+      <input name="password" placeholder="password" type="password" />
+    </div>
+    <div class="login_btn">
+      <button>Log In</button>
+    </div>
   </form>
 </div>
