--- a/views/partials/sign-in-modal.ejs
+++ b/views/partials/sign-in-modal.ejs
@@ -1,12 +1,8 @@
 <div class="sign_in__content">
-  <h1>please log in</h1>
+  <h1 class="sign_in_title">Login</h1>
   <form action="/log-in" id="sign_in_form" method="POST">
-    <div class="login_input">
-      <input name="username" placeholder="username" type="text" />
-      <input name="password" placeholder="password" type="password" />
-    </div>
-    <div class="login_btn">
-      <button>Log In</button>
-    </div>
+    <input class="sign_in_username" name="username" placeholder="Username" type="text" />
+    <input class="sign_in_password" name="password" placeholder="Password" type="password" />
+    <button>Log In</button>
   </form>
 </div>
