--- a/views/partials/sign-in-modal.ejs
+++ b/views/partials/sign-in-modal.ejs
@@ -1,4 +1,5 @@
 <div class="sign_in__content">
+  <span class="close_sign_in">&times;</span>
   <h1 class="sign_in_title">Login</h1>
   <form action="/log-in" id="sign_in_form" method="POST">
     <input class="sign_in_username" name="username" placeholder="Username" type="text" />
