--- a/views/partials/sign-up-modal.ejs
+++ b/views/partials/sign-up-modal.ejs
@@ -1,15 +1,18 @@
 <div class="sign_up__content">
-  <h1 class="sign_up_title">Sign Up</h1>
-  <form action="/sign-up" id="sign_up_form" method="POST">
-    <div class="username_password">
-      <input type="text" class="sign_up_username" name="username" placeholder="Username" />
-      <input type="password" class="sign_up_password" name="password" placeholder="Password" />
-    </div>
-    <div class="passcode">
-      <input class="passcode_input" type="password" name="passcode" placeholder="Passcode" />
-    </div>
-    <div class="sign_up_btn_div">
-      <button class="sign_up_post_btn">Sign Up</button>
-    </div>
-  </form>
+  <span class="close_sign_up">&times;</span>
+  <div class="content_flex">
+    <h1 class="sign_up_title">Sign Up</h1>
+    <form action="/sign-up" id="sign_up_form" method="POST">
+      <div class="username_password">
+        <input type="text" class="sign_up_username" name="username" placeholder="Username" />
+        <input type="password" class="sign_up_password" name="password" placeholder="Password" />
+      </div>
+      <div class="passcode">
+        <input class="passcode_input" type="password" name="passcode" placeholder="Passcode" />
+      </div>
+      <div class="sign_up_btn_div">
+        <button class="sign_up_post_btn">Sign Up</button>
+      </div>
+    </form>
+  </div>
 </div>
