--- a/public/css/style.css
+++ b/public/css/style.css
@@ -231,13 +231,20 @@ ul > li {
 
 #sign_in_form > button, .sign_up_post_btn {
   margin-top: 8px;
-  margin-bottom: 12px;
   height: 28px;
   width: 72px;
   border: none;
   border-radius: 5px;
   background: rgb(218,172,41);
   background: linear-gradient(0deg, rgba(218,172,41,1) 0%, rgba(245,190,73,1) 31%);
+}
+
+#sign_in_form > button {
+  margin-bottom: 24px;
+}
+
+.sign_up_post_btn {
+  margin-bottom: 16px;
 }
 
 /* Messages */
