--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,13 @@
   <% if (user) {%>
     <%- include('./partials/message-form.ejs')%>
   <% } else { %>
-    <p class="support_message">Only members who have signed up with the correct passcode can see who wrote the messages and when </p>
+    <p class="support_message">
+      Only members who have signed up with the correct 
+      passcode can see who wrote the messages and when. 
+      You can find the passcode in the project 
+      <a href="https://github.com/AnthonyHeinrichs/odin-members-only">repo.</a>
+    </p>
+    
   <%}%>
     <div class="messages">
     <% if (user) {%>
