Update message styling, readme, and add login failure logic

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
       Only members who have signed up with the correct 
       passcode can see who wrote the messages and when. 
       You can find the passcode in the project 
-      <a href="https://github.com/AnthonyHeinrichs/odin-members-only">repo.</a>
+      <a href="https://github.com/AnthonyHeinrichs/odin-members-only" target=”_blank”>repo.</a>
     </p>
     
   <%}%>
