--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,6 +24,7 @@ ul > li {
 
 .main_top {
   margin-top: 24px;
+  margin-right: 4px;
   height: 18px;
   width: 340px;
   background-color: #ffffff;
@@ -41,6 +42,7 @@ ul > li {
 
 .main_header {
   background-color: #ffffff;
+  margin-right: 4px;
   height: 224px;
   width: 340px;
   box-shadow: 9px 7px 0px 0px #000000;
@@ -111,6 +113,11 @@ ul > li {
   background-color: #ffffff;
   padding: 8px;
   border-radius: 5px;
+}
+
+#sign_in_error {
+  color: red;
+  margin-bottom: 8px;
 }
 
 .support_message {
@@ -240,7 +247,7 @@ ul > li {
 }
 
 #sign_in_form > button {
-  margin-bottom: 24px;
+  margin-bottom: 8px;
 }
 
 .sign_up_post_btn {
@@ -266,10 +273,12 @@ ul > li {
 }
 
 .messages {
-  width: 75vw;
+  width: 95vw;
+  margin: 0px 16px 8px 12px;
+  max-width: 1200px;
   min-height: 200px;
   background-color: #fff;
-  box-shadow: 9px 7px 0px 0px #000000;
+  box-shadow: 4px 4px 0px 0px #000000;
   border: 4px solid #000000;
   border-radius: 5px;
 }
