--- a/views/partials/message-form.ejs
+++ b/views/partials/message-form.ejs
@@ -1,9 +1,8 @@
 <div class="message_form_content">
-  <h1>New message</h1>
   <form action="/new-message" method="POST">
-    <input class="message_box" name="message" type="text" />
     <div class="new_message_btn_div">
-      <button class="new_message_btn">Post</button>
+      <button class="new_message_btn">Send</button>
     </div>
+    <textarea class="message_box" name="message" placeholder="Add your new message here..."></textarea> 
   </form>
 </div>
