Update form and buttons styles

--- a/views/partials/sign-in-modal.ejs
+++ b/views/partials/sign-in-modal.ejs
@@ -4,6 +4,6 @@
   <form action="/log-in" id="sign_in_form" method="POST">
     <input class="sign_in_username" name="username" placeholder="Username" type="text" />
     <input class="sign_in_password" name="password" placeholder="Password" type="password" />
-    <button>Log In</button>
+    <button class="sign_in_btn">Log In</button>
   </form>
 </div>
