--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,7 +105,7 @@ ul > li {
   font-weight: bold;
 }
 
-.close_sign_in:hover, .close_sign_up:hover {
+#sign_in_btn:hover, #sign_up_btn:hover, .close_sign_in:hover, .close_sign_up:hover {
   cursor: pointer;
 }
 
@@ -134,6 +134,20 @@ ul > li {
 }
 
 /* Forms */
+
+.sign_in_btn, .sign_up_post_btn, .new_message_btn {
+  margin-top: 8px;
+  height: 28px;
+  width: 72px;
+  border: none;
+  border-radius: 5px;
+  background: linear-gradient(0deg, rgba(218,172,41,1) 0%, rgba(245,190,73,1) 31%);
+}
+
+.sign_in_btn:hover, .sign_up_post_btn:hover, .new_message_btn:hover {
+  cursor: pointer;
+  background: linear-gradient(0deg, rgba(218,172,41,1)  0%, rgb(212, 162, 52) 31%);
+}
 
 .sign_up__content, .sign_in__content {
   background-color: #fefefe;
@@ -236,16 +250,6 @@ ul > li {
   border-bottom: #adadad solid 1px;
 }
 
-#sign_in_form > button, .sign_up_post_btn {
-  margin-top: 8px;
-  height: 28px;
-  width: 72px;
-  border: none;
-  border-radius: 5px;
-  background: rgb(218,172,41);
-  background: linear-gradient(0deg, rgba(218,172,41,1) 0%, rgba(245,190,73,1) 31%);
-}
-
 #sign_in_form > button {
   margin-bottom: 8px;
 }
@@ -257,6 +261,7 @@ ul > li {
 /* Messages */
 
 .message_form_content {
+  position: relative;
   margin-top: 12px;
   width: calc(95vw + 8px);
   max-width: 1208px;
@@ -270,6 +275,7 @@ ul > li {
   border-radius: 5px;
   box-shadow: 4px 4px 0px 0px #000000;
   border: 4px solid #000000;
+  resize: none;
   transition: border 400ms;
 }
 
@@ -279,9 +285,9 @@ ul > li {
 }
 
 .new_message_btn_div {
-  display: flex;
-  justify-content: flex-end;
-  margin-top: 12px;
+  position: absolute;
+  bottom: 16px;
+  right: 8px;
 }
 
 .messages {
@@ -293,10 +299,6 @@ ul > li {
   box-shadow: 4px 4px 0px 0px #000000;
   border: 4px solid #000000;
   border-radius: 5px;
-}
-
-.new_message_btn {
-  display: block;
 }
 
 .message {
