--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,50 +7,58 @@
   <title>Members only</title>
 </head>
 <body> 
-  <div class="center">
-    <div class="main_top">
-      <img class="main_top__icons" src="images/memberboxicons.png" alt="box_icons">
-    </div>
-    <div class="main_header">
-      <h1 class="main_header__text">Members Only</h1>
-    <% if (user) {%>
-      <div class="center">
-        <a href="/log-out" class="log_out">Log out</a>
+  <main>
+    <div class="center">
+      <div class="main_top">
+        <img class="main_top__icons" src="images/memberboxicons.png" alt="box_icons">
       </div>
+      <div class="main_header">
+        <h1 class="main_header__text">Members Only</h1>
+      <% if (user) {%>
+        <div class="center">
+          <a href="/log-out" class="log_out">Log out</a>
+        </div>
+      <% } else { %>
+        <div class="nav_buttons">
+          <button id="sign_in_btn">Sign In</button>
+          <button id="sign_up_btn">Sign Up</button>
+        </div>
+      <%}%>
+      </div>
+    <% if (user) {%>
+      <%- include('./partials/message-form.ejs')%>
     <% } else { %>
-      <div class="nav_buttons">
-        <button id="sign_in_btn">Sign In</button>
-        <button id="sign_up_btn">Sign Up</button>
-      </div>
+      <p class="support_message">
+        Only members who have signed up with the correct 
+        passcode can see who wrote the messages and when. 
+        You can find the passcode in the project 
+        <a href="https://github.com/AnthonyHeinrichs/odin-members-only" target=”_blank”>repo.</a>
+      </p>
+      
     <%}%>
-    </div>
-  <% if (user) {%>
-    <%- include('./partials/message-form.ejs')%>
-  <% } else { %>
-    <p class="support_message">
-      Only members who have signed up with the correct 
-      passcode can see who wrote the messages and when. 
-      You can find the passcode in the project 
-      <a href="https://github.com/AnthonyHeinrichs/odin-members-only" target=”_blank”>repo.</a>
-    </p>
-    
-  <%}%>
-    <div class="messages">
-    <% if (user) {%>
-      <div class="sign_in_name">
-        <p>Signed in as <span class="bold"><%= user.username %></span></p>
+      <div class="messages">
+      <% if (user) {%>
+        <div class="sign_in_name">
+          <p>Signed in as <span class="bold"><%= user.username %></span></p>
+        </div>
+      <%}%>
+        <% for (let i = messages.length - 1; i >= 0; i--) { %>
+          <%- include('./partials/messages.ejs', {index: i, messages: messages, user: user}); %>
+        <% } %>
       </div>
-    <%}%>
-      <% for (let i = messages.length - 1; i >= 0; i--) { %>
-        <%- include('./partials/messages.ejs', {index: i, messages: messages, user: user}); %>
-      <% } %>
     </div>
-  </div>
-  <div class="sign_up__modal" id="sign_up">
-    <%- include('./partials/sign-up-modal.ejs')%>
-  </div>
-  <div class="sign_in__modal" id="sign_in">
-    <%- include('./partials/sign-in-modal.ejs')%>
-  </div>
+    <div class="sign_up__modal" id="sign_up">
+      <%- include('./partials/sign-up-modal.ejs')%>
+    </div>
+    <div class="sign_in__modal" id="sign_in">
+      <%- include('./partials/sign-in-modal.ejs')%>
+    </div>
+  </main>
+  <footer>
+    <p>Copyright © <%= year %> AnthonyHeinrichs</p>
+    <a href="https://github.com/AnthonyHeinrichs" target="_blank">
+      <img class="github" src="../images/github.svg" alt="github"></img>
+    </a>
+  </footer>
 </body>
 </html>
